# OCRCheck

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.opensearch  README.md  docker-compose.yml
.github/workflows/: deploy-huggingface.yml
backend/: Dockerfile  Dockerfile.worker  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: comments.py  documents.py  health.py  search.py
backend/app/db/: database.py
backend/app/models/: __init__.py  comment.py  document.py  ocr_result.py
backend/app/services/: ai_service.py  queue.py  search.py  storage.py
backend/app/workers/: __main__.py  ocr_processor.py  ocr_worker.py  pdf_processor.py
docker/: Dockerfile.spaces  README.hf.md  nginx-spaces.conf  start_spaces.sh  supervisord.conf
docs/: architecture.puml  deployment.puml  feasibility-report.md  processing-pipeline.puml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/_components/: Breadcrumb.tsx  ConfirmDialog.tsx  Header.tsx  HighlightOverlay.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/documents/[id]/: page.tsx
frontend/src/app/report/: layout.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/shared/[token]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/lib/: api.ts  format.ts
